[package]
name = "food_server"
version = "0.1.0"
edition = "2021"
description = "Simple API to store food and meal for calorie counting"
authors = ["Emma Britton <emmabritton@pm.me>"]
publish = false
license-file = "../LICENSE"

[dependencies]
anyhow = "1.0.66"
actix-web = "4"
rustls = "0.20.6"
serde = "1.0.145"
serde_json = "1.0.85"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.0", features = ["full"] }
log = "0.4.17"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "serde"] }
chrono = { version = "0.4.22", features = ["serde"] }
simple_logger = { version = "4.0.0", features = ["timestamps"] }
scrypt = "0.10.0"
password-hash = "0.4.2"
strum = { version = "0.24", features = ["derive"] }
dotenvy = "0.15.6"